--- a/feeds.toml
+++ b/feeds.toml
@@ -3,7 +3,7 @@ title = "FLO ─ New Track"
 url = "https://www.music-flo.com/new/track?sortType=KPOP"
 entrySelector = "table.track_list_table tbody tr"
 titleSelector = "p.tit span.tit__inner strong.tit__text"
-linkSelector = "span.artist_link a.last"
+linkSelector = "div.desc a.desc__link"
 imageSelector = "div.thumb a img"
 contentSelector = "span.artist_link a.last"
 waitUntil = "networkidle"
